...
                        <outlet property="delegate" destination="-1" id="Wwa-3H-gpP"/>
                    </connections>
                </tableView>
                <button contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c7V-25-T5q" userLabel="Button Log" customClass="LULogTypeButton">
                    <rect key="frame" x="402" y="20" width="66" height="44"/>
                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                    <accessibility key="accessibilityConfiguration" label="Type Debug"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="66" id="K1D-KQ-VAo"/>
                        <constraint firstAttribute="height" constant="44" id="a83-gv-elc"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                    <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
...
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                </button>
                <button contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jA1-cI-4L9" userLabel="Button Warning" customClass="LULogTypeButton">
                    <rect key="frame" x="468" y="20" width="66" height="44"/>
                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                    <accessibility key="accessibilityConfiguration" label="Type Warning"/>
                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                    <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                    <inset key="imageEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                    <state key="normal" title="999+" image="lunar_console_icon_log_warning.png" backgroundImage="lunar_console_log_button_background.png">
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                </button>
                <button contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dmv-dc-ake" userLabel="Button Error" customClass="LULogTypeButton">
                    <rect key="frame" x="534" y="20" width="66" height="44"/>
                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                    <accessibility key="accessibilityConfiguration" label="Type Error"/>
                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                    <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                    <inset key="imageEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                    <state key="normal" title="999+" image="lunar_console_icon_log_error.png" backgroundImage="lunar_console_log_button_background.png">
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Gl-60-1dT" userLabel="Button More">
                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Console Button More"/>
                    <state key="normal" image="lunar_console_icon_button_more.png" backgroundImage="lunar_console_log_button_background.png"/>
                    <connections>
                        <action selector="onMoreButton:" destination="-1" eventType="touchUpInside" id="C9h-VG-7yE"/>
                    </connections>
                </button>
                <searchBar contentMode="redraw" barStyle="black" placeholder="Filter" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKS-zo-ZIz">
                    <rect key="frame" x="0.0" y="20" width="356" height="44"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="Z1T-w0-kvT"/>
                    </constraints>
                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                    <textInputTraits key="textInputTraits"/>
...
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <state key="selected" image="lunar_console_icon_button_lock.png"/>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eru-b9-j3c" userLabel="Button Close">
                    <rect key="frame" x="546" y="562" width="46" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Console Close Button"/>
                    <state key="normal" image="lunar_console_icon_button_close.png">
                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="onClose:" destination="-1" eventType="touchUpInside" id="uqx-bQ-vyE"/>
...
