...
        _messageLabel = [[UILabel alloc] initWithFrame:CGRectMake(messageX, messageY, messageWidth, messageHeight)];
        _messageLabel.font = theme.font;
        _messageLabel.lineBreakMode = theme.lineBreakMode;
        _messageLabel.numberOfLines = 0;
        _messageLabel.opaque = YES;
        _messageLabel.isAccessibilityElement = YES;
        _messageLabel.accessibilityIdentifier = @"Log Message Label";
        
        [self.contentView addSubview:_messageLabel];
    }
    return self;
}

...
        _countLabel.numberOfLines = 1;
        _countLabel.lineBreakMode = NSLineBreakByClipping;
        _countLabel.opaque = YES;
        _countLabel.textColor = theme.collapseTextColor;
        _countLabel.backgroundColor = theme.collapseBackgroundColor;
        _countLabel.isAccessibilityElement = YES;
        _countLabel.accessibilityIdentifier = @"Log Collapse Label";
        
        [self.contentView addSubview:_countLabel];
    }
    return self;
}

...
