...
{
    LUConsoleMenuController *controller = [LUConsoleMenuController new];
    
    // toggle collapse button
    if (_console.isCollapsed)
    {
        [controller addButtonTitle:@"Expand" target:self action:@selector(onExpandButton:)];
    }
    else
    {
        [controller addButtonTitle:@"Collapse" target:self action:@selector(onCollapseButton:)];
    }
    
    [controller setDelegate:self];
    
    // add as child view controller
    [self addChildOverlayController:controller animated:NO];
...
