...
                                        <connections>
                                            <action selector="onToggleLoggerWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KnI-49-DiD"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evW-4U-GLQ">
                                        <rect key="frame" x="0.0" y="214" width="280" height="30"/>
                                        <state key="normal" title="Show Controller">
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="onShowControllerWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ket-UX-4KP"/>
                                        </connections>
                                    </button>
...
